add rightbar, search component, premium component and global font family

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,7 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: 'TwitterChirp';
+    src: url('~/assets/fonts/chirp-bold-webfont.woff2') format('woff2'),
+    url('~/assets/fonts/chirp-bold-webfont.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
 
+}
+@font-face {
+    font-family: 'TwitterChirp';
+    src: url('~/assets/fonts/chirp-heavy-webfont.woff2') format('woff2'),
+    url('~/assets/fonts/chirp-heavy-webfont.woff') format('woff');
+    font-weight: 800;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'TwitterChirp';
+    src: url('~/assets/fonts/chirp-medium-webfont.woff2') format('woff2'),
+    url('~/assets/fonts/chirp-medium-webfont.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'TwitterChirp';
+    src: url('~/assets/fonts/chirp-regular-webfont.woff2') format('woff2'),
+    url('~/assets/fonts/chirp-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+html{
+    @apply font-twitter;
+}
 body {
     @apply bg-black text-white text-[15px] antialiased;
 }
