--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -37,7 +37,10 @@ html{
     @apply font-twitter;
 }
 body {
-    @apply bg-black text-white text-[15px] antialiased;
+    @apply bg-[color:var(--background-primary)] text-[color:var(--color-base)] text-[15px] antialiased;
+}
+.shadow-box {
+    box-shadow: var(--box-shadow);
 }
 
 /*
