--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -33,11 +33,14 @@
     font-style: normal;
 
 }
+:root{
+    font-size: var(--font-size);
+}
 html{
     @apply font-twitter;
 }
 body {
-    @apply bg-[color:var(--background-primary)] text-[color:var(--color-base)] text-[15px] antialiased;
+    @apply bg-[color:var(--background-primary)] text-[color:var(--color-base)] text-[0.938rem] antialiased;
 }
 .shadow-box {
     box-shadow: var(--box-shadow);
